--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -802,25 +802,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'NaN' from 'numpy' (/home/ubuntu/Rheza/.venv/lib/python3.12/site-packages/numpy/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moverlap\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hl2\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvolatility\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m atr\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_offset, verify_series\n",
-      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/__init__.py:116\u001b[0m\n\u001b[1;32m     97\u001b[0m EXCHANGE_TZ \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNZSX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m12\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mASX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m11\u001b[39m,\n\u001b[1;32m     99\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m9\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHKE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSGX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m8\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBMF\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNYSE\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTSX\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m\n\u001b[1;32m    103\u001b[0m }\n\u001b[1;32m    105\u001b[0m RATE \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    106\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDAYS_PER_MONTH\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m21\u001b[39m,\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMINUTES_PER_HOUR\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m60\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    113\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYEARLY\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m    114\u001b[0m }\n\u001b[0;32m--> 116\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/core.py:18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcandles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcycles\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmomentum\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moverlap\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mperformance\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/momentum/__init__.py:34\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msmi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m smi\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msqueeze\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m squeeze\n\u001b[0;32m---> 34\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msqueeze_pro\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m squeeze_pro\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stc\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstoch\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stoch\n",
-      "File \u001b[0;32m~/Rheza/.venv/lib/python3.12/site-packages/pandas_ta/momentum/squeeze_pro.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# -*- coding: utf-8 -*-\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NaN \u001b[38;5;28;01mas\u001b[39;00m npNaN\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataFrame\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas_ta\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmomentum\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mom\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'NaN' from 'numpy' (/home/ubuntu/Rheza/.venv/lib/python3.12/site-packages/numpy/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1841,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,7 +1835,7 @@
     "\n",
     "class BinanceAPI:\n",
     "    def __init__(self, api_key: str, api_secret: str, testnet: bool = False):\n",
-    "        self.api_key = api_key\n",
+    "        self.api_key = api_key  \n",
     "        self.api_secret = api_secret\n",
     "        if testnet:\n",
     "            self.base_url = \"https://testnet.binancefuture.com\"\n",
@@ -1931,52 +1915,214 @@
     "        if price:\n",
     "            params[\"price\"] = price\n",
     "\n",
-    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)"
+    "        return self._send_request(\"POST\", \"/fapi/v1/order\", params, signed=True)\n",
+    "    \n",
+    "    def close_all_position(self):\n",
+    "        \"\"\"Close all active positions on the account\"\"\"\n",
+    "        # Get all active positions\n",
+    "        positions = self.get_position_risk()\n",
+    "        if positions is None:\n",
+    "            logging.error(\"Failed to retrieve position information.\")\n",
+    "            return\n",
+    "\n",
+    "        # Iterate through each position and close it\n",
+    "        for position in positions:\n",
+    "            symbol = position['symbol']\n",
+    "            position_amt = float(position['positionAmt'])\n",
+    "\n",
+    "            if position_amt != 0:\n",
+    "                side = 'SELL' if position_amt > 0 else 'BUY'\n",
+    "                quantity = abs(position_amt)\n",
+    "\n",
+    "                # Create a market order to close the position\n",
+    "                response = self.create_order(\n",
+    "                    symbol=symbol,\n",
+    "                    side=side,\n",
+    "                    order_type=\"MARKET\",\n",
+    "                    quantity=quantity,\n",
+    "                    reduce_only=True\n",
+    "                )\n",
+    "\n",
+    "                if response:\n",
+    "                    logging.info(f\"Closed position: {symbol} with quantity {quantity}\")\n",
+    "                else:\n",
+    "                    logging.error(f\"Failed to close position: {symbol}\")\n",
+    "                    \n",
+    "    def ping(self) -> dict:\n",
+    "        \"\"\"Ping the Binance API to check connectivity.\"\"\"\n",
+    "        return self._send_request(\"GET\", \"/fapi/v1/ping\")\n",
+    "    \n",
+    "    def get_server_time(self) -> dict:\n",
+    "        \"\"\"Get Binance server time to confirm connectivity.\"\"\"\n",
+    "        return self._send_request(\"GET\", \"/fapi/v1/time\")\n",
+    "    \n",
+    "    def check_balance(self):\n",
+    "        endpoint = \"/fapi/v2/balance\"\n",
+    "        params = {\n",
+    "            \"timestamp\": int(time.time() * 1000)\n",
+    "        }\n",
+    "        params[\"signature\"] = self._generate_signature(params)\n",
+    "        return self._send_request(\"GET\", endpoint, params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace these with your testnet credentials\n",
+    "API_KEY = \"TGZ6PvNeQc3c3ctlzm0UOdkgr1fi5oEMMPXDK9Dns51VXGKYGIirlOJ8de5TYNRC\"\n",
+    "API_SECRET = \"Ng4YmUDDzq7W9l5F08qcY3Qq2OXms4xE7A9nlslDIxP2agjVWqmZbOOxCRTZEHOl\"\n",
+    "\n",
+    "# Instantiate BinanceAPI for Testnet\n",
+    "binance_api = BinanceAPI(api_key=API_KEY, api_secret=API_SECRET, testnet=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ping Response: {}\n",
+      "Server Time: {'serverTime': 1736411976575}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check connectivity with ping\n",
+    "ping_response = binance_api.ping()\n",
+    "print(\"Ping Response:\", ping_response)  # Should return an empty dictionary if successful\n",
+    "\n",
+    "# Check server time\n",
+    "server_time = binance_api.get_server_time()\n",
+    "print(\"Server Time:\", server_time)  # Should return the server time in milliseconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance Info: [{'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'FDUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.00107864', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BFUSD', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.89011004', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BNB', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.13675352', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'ETH', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.02868846', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'BTC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '0.00102066', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDT', 'balance': '100.00000000', 'crossWalletBalance': '100.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.98000230', 'maxWithdrawAmount': '100.00000000', 'marginAvailable': True, 'updateTime': 1736411620939}, {'accountAlias': 'fWoCfWAuAuoCSgTi', 'asset': 'USDC', 'balance': '0.00000000', 'crossWalletBalance': '0.00000000', 'crossUnPnl': '0.00000000', 'availableBalance': '99.92668387', 'maxWithdrawAmount': '0.00000000', 'marginAvailable': True, 'updateTime': 0}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get balance information\n",
+    "balance = binance_api.check_balance()\n",
+    "\n",
+    "# Print the balance information\n",
+    "if balance:\n",
+    "    print(\"Balance Info:\", balance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Long Order Response: {'orderId': 15823060022, 'symbol': 'SUIUSDT', 'status': 'NEW', 'clientOrderId': 'Nib5vNrhppQas42ffdgyUO', 'price': '0.000000', 'avgPrice': '0.00', 'origQty': '2.0', 'executedQty': '0.0', 'cumQty': '0.0', 'cumQuote': '0.0000000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'BUY', 'positionSide': 'BOTH', 'stopPrice': '0.000000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1736412266462}\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_order_response = binance_api.create_order(\n",
+    "    symbol=\"SUIUSDT\",    # Trading pair\n",
+    "    side=\"BUY\",          # Buy to open a long position\n",
+    "    order_type=\"MARKET\", # Market order for instant execution\n",
+    "    quantity=2         # Valid quantity in SUI (base asset)\n",
+    ")\n",
+    "print(\"Long Order Response:\", long_order_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Short Order Response: {'orderId': 15822875814, 'symbol': 'SUIUSDT', 'status': 'NEW', 'clientOrderId': 'utbUXsoju4AtvJ2daK0we6', 'price': '0.000000', 'avgPrice': '0.00', 'origQty': '2.0', 'executedQty': '0.0', 'cumQty': '0.0', 'cumQuote': '0.0000000', 'timeInForce': 'GTC', 'type': 'MARKET', 'reduceOnly': False, 'closePosition': False, 'side': 'SELL', 'positionSide': 'BOTH', 'stopPrice': '0.000000', 'workingType': 'CONTRACT_PRICE', 'priceProtect': False, 'origType': 'MARKET', 'priceMatch': 'NONE', 'selfTradePreventionMode': 'EXPIRE_MAKER', 'goodTillDate': 0, 'updateTime': 1736412121900}\n"
+     ]
+    }
+   ],
+   "source": [
+    "long_order_response = binance_api.create_order(\n",
+    "    symbol=\"SUIUSDT\",    # Trading pair\n",
+    "    side=\"SELL\",          # Buy to open a long position\n",
+    "    order_type=\"MARKET\", # Market order for instant execution\n",
+    "    quantity=2         # Valid quantity in SUI (base asset)\n",
+    ")\n",
+    "print(\"Short Order Response:\", long_order_response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:API request failed: 401 Client Error: Unauthorized for url: https://fapi.binance.com/fapi/v1/leverage?symbol=SOLUSDT&leverage=1&timestamp=1736320721058&signature=a26d48777fe2c449f0efc4f7302aff6d2bcb4555791a8d53670cf940955a0d5a\n"
+      "INFO:root:Closed position: SUIUSDT with quantity 2.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Close All Response: None\n"
      ]
     }
    ],
    "source": [
-    "# CONFIG\n",
-    "api_key = \"your_api_key\"\n",
-    "api_secret = \"your_api_secret\"\n",
-    "\n",
-    "# Initialize Binance API client\n",
-    "binance_api = BinanceAPI(api_key, api_secret)\n",
-    "\n",
-    "# Open a long position with leverage\n",
-    "symbol = \"SOLUSDT\"\n",
-    "order_type = \"MARKET\"  # Market order\n",
-    "quantity = 150  # Quantity to buy\n",
-    "leverage = 1  # Set leverage to 1\n",
-    "\n",
-    "# Set leverage before opening the position (you need to implement this method in your BinanceAPI class)\n",
-    "binance_api.set_leverage(symbol, leverage)"
+    "# Assuming you have an instance of the class with the close_all_position method\n",
+    "close_all = binance_api.close_all_position()\n",
+    "print(\"Close All Response:\", close_all)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Request Parameters: symbol=SUIUSDT, side=BUY, type=MARKET, quantity=0.1, timestamp=1736411699007\n"
+     ]
+    }
+   ],
    "source": [
-    "{\n",
-    "    \"api_key\": \"YOUR_BINANCE_API_KEY\",\n",
-    "    \"api_secret\": \"YOUR_BINANCE_API_SECRET\",\n",
-    "    \"trade_amount_usdt\": 5,\n",
-    "    \"leverage\": 1,\n",
-    "    \"testnet\": false,\n",
-    "    \"symbols\": \"SOLUSDT\"\n",
-    "}"
+    "print(f\"Request Parameters: symbol=SUIUSDT, side=BUY, type=MARKET, quantity=0.1, timestamp={int(time.time() * 1000)}\")"
    ]
   },
   {
