--- a/03X_ST_IC/02_prod/live_test_binance.ipynb
+++ b/03X_ST_IC/02_prod/live_test_binance.ipynb
@@ -2917,6 +2917,421 @@
    "source": [
     "current_action, new_prev_action = handle_trading_action(suggested_action, prev_action)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fixing Data Fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binance_recursive_fetch_2(coins, interval, starttime, endtime=None, data_type='futures'):\n",
+    "\n",
+    "    # Define the column structure\n",
+    "    BINANCE_CANDLE_COLUMNS = ['opentime', 'openprice', 'highprice', 'lowprice', 'closeprice', 'volume', 'closetime',\n",
+    "                              'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused']\n",
+    "\n",
+    "    if endtime is None:\n",
+    "        endtime = int(time.time() * 1000)  # Current time in milliseconds\n",
+    "\n",
+    "    all_coins_result = {}\n",
+    "    data_list = []\n",
+    "    call_dict = {}\n",
+    "\n",
+    "    for coin in tqdm(coins):\n",
+    "        result_list = []\n",
+    "        current_time = starttime\n",
+    "        call = 0\n",
+    "        timestamps = []\n",
+    "\n",
+    "        while current_time < endtime:\n",
+    "            limit = min(1000, int((endtime - current_time) / (1000 * 60)) + 1)\n",
+    "            \n",
+    "            if data_type == 'spot':\n",
+    "                url = (f'https://api.binance.com/api/v3/klines'\n",
+    "                       f'?symbol={coin}USDT'\n",
+    "                       f'&startTime={current_time}'\n",
+    "                       f'&interval={interval}'\n",
+    "                       f'&limit={limit}')\n",
+    "            elif data_type == 'futures':\n",
+    "                url = (f'https://fapi.binance.com/fapi/v1/klines'\n",
+    "                       f'?symbol={coin}USDT'\n",
+    "                       f'&startTime={current_time}'\n",
+    "                       f'&interval={interval}'\n",
+    "                       f'&limit={limit}')\n",
+    "            else:\n",
+    "                raise ValueError(\"Invalid data_type. Choose either 'spot' or 'futures'.\")\n",
+    "\n",
+    "            response = requests.get(url)\n",
+    "            response.raise_for_status()  # Raise an error for bad HTTP responses\n",
+    "            result_list += response.json()\n",
+    "\n",
+    "            if result_list:\n",
+    "                current_time = result_list[-1][0] + 60000  # Update to the next timestamp\n",
+    "                timestamps.append(current_time)\n",
+    "                call += 1\n",
+    "\n",
+    "                if current_time >= endtime:\n",
+    "                    # logging.info(f\"Reached endtime at {datetime.fromtimestamp(current_time / 1000).strftime('%Y-%m-%d %H:%M:%S')}. Stopping fetch.\")\n",
+    "                    break\n",
+    "\n",
+    "                # logging.info(f\"{datetime.fromtimestamp(current_time / 1000).strftime('%Y-%m-%d %H:%M:%S')} \"\n",
+    "                    #   f\"status: {current_time < endtime}, time: {current_time}, calls: {call}\")\n",
+    "\n",
+    "            if len(timestamps) > 1 and timestamps[-1] == timestamps[-2]:\n",
+    "                # logging.info(\"Duplicate timestamp detected. Stopping fetch.\")\n",
+    "                break\n",
+    "\n",
+    "        current_df = pd.DataFrame(result_list, columns=BINANCE_CANDLE_COLUMNS)\n",
+    "        current_df['coin'] = coin\n",
+    "        current_df = current_df[['coin'] + BINANCE_CANDLE_COLUMNS]\n",
+    "        current_df = current_df.values.tolist()\n",
+    "\n",
+    "        data_list += current_df\n",
+    "        call_dict.update({coin: call})\n",
+    "\n",
+    "    return {'data': data_list, 'call': call_dict}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  3.09it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>opentime</th>\n",
+       "      <th>openprice</th>\n",
+       "      <th>highprice</th>\n",
+       "      <th>lowprice</th>\n",
+       "      <th>closeprice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1736476200000</td>\n",
+       "      <td>188.81</td>\n",
+       "      <td>189.30</td>\n",
+       "      <td>188.03</td>\n",
+       "      <td>188.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1736478000000</td>\n",
+       "      <td>188.18</td>\n",
+       "      <td>188.72</td>\n",
+       "      <td>187.86</td>\n",
+       "      <td>188.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1736479800000</td>\n",
+       "      <td>188.34</td>\n",
+       "      <td>189.39</td>\n",
+       "      <td>187.91</td>\n",
+       "      <td>189.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1736481600000</td>\n",
+       "      <td>189.01</td>\n",
+       "      <td>189.88</td>\n",
+       "      <td>188.64</td>\n",
+       "      <td>188.92</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        opentime  openprice  highprice  lowprice  closeprice\n",
+       "0  1736476200000     188.81     189.30    188.03      188.18\n",
+       "1  1736478000000     188.18     188.72    187.86      188.35\n",
+       "2  1736479800000     188.34     189.39    187.91      189.02\n",
+       "3  1736481600000     189.01     189.88    188.64      188.92"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Get the current time\n",
+    "now = datetime.now()\n",
+    "\n",
+    "# Set the start time to 10:00 AM today\n",
+    "start_time = datetime(now.year, now.month, now.day, 2, 10, 0)\n",
+    "\n",
+    "# Set the end time to 12:30 PM today\n",
+    "end_time = datetime(now.year, now.month, now.day, 2, 30, 0)\n",
+    "\n",
+    "# Convert to milliseconds (as expected by the Binance API)\n",
+    "start_time = int(start_time.timestamp() * 1000)\n",
+    "end_time = int(end_time.timestamp() * 1000)\n",
+    "\n",
+    "# Fetch data\n",
+    "data = binance_recursive_fetch_2(\n",
+    "    ['SOL'],\n",
+    "    '30m',\n",
+    "    starttime=start_time,\n",
+    "    data_type='futures'  # Fetch futures data\n",
+    ")\n",
+    "\n",
+    "# Define the column names for the DataFrame based on the Binance API response structure\n",
+    "columns = ['coin', 'opentime', 'openprice', 'highprice', 'lowprice', 'closeprice', 'volume', 'closetime',\n",
+    "            'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused']\n",
+    "\n",
+    "# Convert the list of data into a DataFrame\n",
+    "new_data = pd.DataFrame(data['data'], columns=columns)\n",
+    "\n",
+    "# Drop unnecessary columns\n",
+    "new_data.drop(columns=['coin', 'volume', 'closetime', 'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused'], inplace=True)\n",
+    "\n",
+    "# Convert columns 1-4 (openprice, highprice, lowprice, closeprice) to float\n",
+    "new_data[['openprice', 'highprice', 'lowprice', 'closeprice']] = new_data[['openprice', 'highprice', 'lowprice', 'closeprice']].apply(pd.to_numeric, errors='coerce')\n",
+    "\n",
+    "# Check if there are new rows\n",
+    "new_data = new_data.iloc[:-1]\n",
+    "\n",
+    "new_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last opentime in CSV: 1736479800000\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_df = pd.read_csv('/home/ubuntu/Rheza/local-share/03X_ST_IC/02_prod/sol_usdt_data.csv')\n",
+    "last_opentime = current_df['opentime'].iloc[-1]\n",
+    "print(f\"Last opentime in CSV: {last_opentime}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rounded timestamp: 1736483400000, Last opentime in CSV: 1736479800000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the current Unix timestamp in seconds\n",
+    "current_timestamp = int(time.time())\n",
+    "\n",
+    "# Round down to the nearest 30 minutes (1800 seconds)\n",
+    "rounded_timestamp = current_timestamp - (current_timestamp % 1800)\n",
+    "\n",
+    "# Convert the timestamp back to milliseconds\n",
+    "rounded_timestamp_ms = rounded_timestamp * 1000\n",
+    "\n",
+    "# Log the rounded timestamp for comparison\n",
+    "print(f\"Rounded timestamp: {rounded_timestamp_ms}, Last opentime in CSV: {last_opentime}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_and_append_data():\n",
+    "    # Get the latest opentime from the CSV file\n",
+    "    try:\n",
+    "        current_df = pd.read_csv('/home/ubuntu/Rheza/local-share/03X_ST_IC/02_prod/sol_usdt_data.csv')\n",
+    "        last_opentime = current_df['opentime'].iloc[-1]\n",
+    "    except FileNotFoundError:\n",
+    "        logging.error(\"CSV file not found. Ensure the path is correct.\")\n",
+    "        return 0\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error reading CSV file: {e}\")\n",
+    "        return 0\n",
+    "\n",
+    "    # Log the last opentime and the length of the CSV before appending\n",
+    "    logging.info(f\"Last opentime in CSV: {last_opentime}\")\n",
+    "    logging.info(f\"CSV length before appending: {len(current_df)}\")\n",
+    "\n",
+    "    # Get the current Unix timestamp in seconds\n",
+    "    current_timestamp = int(time.time())\n",
+    "\n",
+    "    # Round down to the nearest 30 minutes (1800 seconds)\n",
+    "    rounded_timestamp = current_timestamp - (current_timestamp % 1800)\n",
+    "\n",
+    "    # Convert the timestamp back to milliseconds\n",
+    "    rounded_timestamp_ms = rounded_timestamp * 1000\n",
+    "\n",
+    "    # Log the rounded timestamp for comparison\n",
+    "    logging.info(f\"Rounded timestamp: {rounded_timestamp_ms}, Last opentime in CSV: {last_opentime}\")\n",
+    "\n",
+    "    # Initialize new_row_count to 0 by default\n",
+    "    new_row_count = 0\n",
+    "\n",
+    "    # Check if there is new data to fetch (if rounded_timestamp_ms > last_opentime)\n",
+    "    if rounded_timestamp_ms > last_opentime:\n",
+    "        # Fetch the next data (increment by 1800000 ms, or 30 minutes)\n",
+    "        try:\n",
+    "            data = binance_recursive_fetch_2(\n",
+    "                ['SOL'],\n",
+    "                '30m',\n",
+    "                starttime=int(last_opentime + 1800000),\n",
+    "                endtime=None,\n",
+    "                data_type='futures'  # Fetch futures/sport\n",
+    "            )\n",
+    "\n",
+    "            print(f\"Fetched data: {data}\")\n",
+    "            # logging.info(f\"Fetched data: {data}\")\n",
+    "\n",
+    "            # Check if the data exists\n",
+    "            if 'data' in data and data['data']:\n",
+    "                # Define the column names for the DataFrame based on the Binance API response structure\n",
+    "                columns = ['coin', 'opentime', 'openprice', 'highprice', 'lowprice', 'closeprice', 'volume', 'closetime',\n",
+    "                           'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused']\n",
+    "\n",
+    "                # Convert the list of data into a DataFrame\n",
+    "                new_data = pd.DataFrame(data['data'], columns=columns)\n",
+    "\n",
+    "                # Drop unnecessary columns\n",
+    "                new_data.drop(columns=['coin', 'volume', 'closetime', 'quotevolume', 'trades', 'taker_buy_volume', 'taker_buy_quote', 'unused'], inplace=True)\n",
+    "\n",
+    "                # Convert columns 1-4 (openprice, highprice, lowprice, closeprice) to float\n",
+    "                new_data[['openprice', 'highprice', 'lowprice', 'closeprice']] = new_data[['openprice', 'highprice', 'lowprice', 'closeprice']].apply(pd.to_numeric, errors='coerce')\n",
+    "                \n",
+    "                # Check if there are new rows\n",
+    "                new_data = new_data.iloc[:-1]\n",
+    "\n",
+    "                # Check if there are new rows\n",
+    "                new_row_count = len(new_data)\n",
+    "\n",
+    "                if new_row_count > 0:\n",
+    "                    # Append the new data to the existing CSV\n",
+    "                    new_data.to_csv('/home/ubuntu/Rheza/local-share/03X_ST_IC/02_prod/sol_usdt_data.csv', mode='a', header=False, index=False)\n",
+    "                    \n",
+    "                    # Log the number of new rows appended\n",
+    "                    logging.info(f\"{new_row_count} new rows fetched and appended successfully.\")\n",
+    "\n",
+    "                    # Log the new CSV length after appending\n",
+    "                    current_df = pd.read_csv('/home/ubuntu/Rheza/local-share/03X_ST_IC/02_prod/sol_usdt_data.csv')\n",
+    "                    logging.info(f\"New CSV length after appending: {len(current_df)}\")\n",
+    "                    logging.info(f\"New data: {current_df.tail(1)}\")\n",
+    "                else:\n",
+    "                    logging.info(\"No new data to append.\")\n",
+    "            else:\n",
+    "                logging.info(\"No new data fetched from Binance.\")\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Error fetching data from Binance: {e}\")\n",
+    "    else:\n",
+    "        logging.info(\"No new data available. The current timestamp is not greater than the last opentime.\")\n",
+    "\n",
+    "    return new_row_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last opentime in CSV: 1736483400000\n",
+      "CSV length before appending: 442\n",
+      "Rounded timestamp: 1736485200000, Last opentime in CSV: 1736483400000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  5.05it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched data: {'data': [['SOL', 1736485200000, '188.9800', '189.1800', '188.7900', '188.9100', '26683', 1736486999999, '5042688.6560', 4755, '11450', '2163997.7260', '0']], 'call': {'SOL': 2}}\n",
+      "No new data to append.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fetch_and_append_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
